--- a/an_awk_tutorial.tex
+++ b/an_awk_tutorial.tex
@@ -25,7 +25,7 @@ Susie   4.25    18
 \end{file}
 现在你想要打印每位雇员的名字以及他们的报酬 (每小时工资乘以工作时长), 而雇员
 的工作时长必须大于零. 这种类型的工作是 awk 的设计目标之一, 所以会很简单.
-只要输入下面这一行即可:
+只要键入下面这一行即可:
 \begin{awkcode}
 awk '$3 > 0 { print $1, $2 * $3 }' emp.data
 \end{awkcode}
@@ -39,7 +39,7 @@ awk '$3 > 0 { print $1, $2 * $3 }' emp.data
 \end{awkcode}
 就会为每一个匹配行打印第一个字段, 以及第二与第三个字段的乘积.
 
-如果你想要打印没有工作的雇员的名字, 输入
+如果你想要打印没有工作的雇员的名字, 键入
 \begin{awkcode}
 awk '$3 == 0 { print $1 }' emp.data
 \end{awkcode}
@@ -72,9 +72,9 @@ $
 部分是使用 awk 语言编写的程序. 这一章中的每一个 awk 程序都是由一个或多个
 模式-动作语句组成的序列:
 \begin{pattern}
-pattern { action }
-pattern { action }
-...
+    \textit{pattern} \texttt{\{} \textit{action} \texttt{\}}
+    \textit{pattern} \texttt{\{} \textit{action} \texttt{\}}
+    ...
 \end{pattern}
 awk 的基本操作是在由输入行组成的序列中, 一个接一个地扫描每一行, 搜索被程序
 中的模式 \cterm{匹配} (\term{match}) 的行. "匹配" 的精确含义依赖于问题中
@@ -110,3 +110,79 @@ Dan     3.75    0
 对于每一个输入行, 动作 (在这个例子里是打印第1个字段) 都会被执行.
 
 因为模式与动作都是可选的, 所以用花括号将动作包围起来, 以便区分两者.
+
+\subsection{运行 AWK 程序}
+\label{running_an_awk_program}
+
+运行一个 awk 程序有多种方式. 你可以键入下面这种形式的命令
+\begin{pattern}
+    \texttt{awk} \texttt{'}\textit{program}\texttt{'} \textit{input files}
+\end{pattern}
+对指定的输入文件的每一行运行程序 \textit{program}. 例如你可以键入
+\begin{awkcode}
+    awk '$3 == 0 { print $1 }' file1 file2
+\end{awkcode}
+来打印文件 \filename{file1} 与 \filename{file2} 的每一行的第一个字段,
+如果该行的第3个字段为0的话.
+
+你也可以在命令行上省略输入文件, 只要键入
+\begin{pattern}
+    \texttt{awk} \texttt{'}\textit{program}\texttt{'}
+\end{pattern}
+在这种情况下, awk 会将 \textit{program} 应用到你接下来在终端输入的内容上面,
+直到你键入一个文件结束标志 (Unix 系统是组合键 control-d). 下面是一个在 Unix
+的例子
+\begin{awkcode}
+    $ awk '$3 == 0 { print $1 print $1 }'
+    Beth    4.00    0
+    Beth
+    Dan     3.75    0
+    Dan
+    Kathy   3.75    10
+    Kathy   3.75    0
+    Kathy
+    ...
+\end{awkcode}
+% TODO: 加粗显示未实现
+被计算机打印的字符加粗显示.
+
+这种行为使得用 awk 试验非常容易: 键入程序与数据, 看一下会发生什么. 我们再
+次建议你尝试运行并修改书中的程序.
+
+注意到, 命令行中的程序被单引号包围. 这种行为可以保护程序中的字符 (例如
+\verb'$') 被 shell 解释, 也可以让程序的长度多于一行.
+
+当程序的长度比较短时 (只有几行), 这种安排会比较方便. 如果程序比较长, 更好的
+做法是将它们放在一个单独的文件中, 例如文件名可以叫作 \filename{progfile},
+运行时只要键入
+\begin{pattern}
+    \texttt{awk -f progfile} \textit{optional list of files}
+\end{pattern}
+选项 \verb'-f' 告诉 awk 从文件中提取程序. 在 \filename{progfile} 出现的地方
+可以是任意的文件名.
+
+\subsection{错误}
+\label{subsec:errors}
+
+如果你在 awk 程序犯了一个错误, awk 会显示一个诊断信息. 例如, 如果你打错了一
+个花括号, 就像这样
+\begin{awkcode}
+    awk '$3 == 0 [ print $1 }' emp.data
+\end{awkcode}
+你将会收到一个这样的消息
+\begin{file}
+    awk: syntax error at source line 1
+    context is
+            $3 == 0 >>> [ <<<
+            extra }
+            missing ]
+    awk: Bailing out at source line 1
+\end{file}
+"Syntax error" 意味着你犯了一个语法错误, 这个错误被发现的地方用
+\verb'>>> <<<' 标记. "Bailing out" 意味着无法恢复. 有时候, 你可以得到更多的
+关于错误的信息, 例如报告了一个不匹配的花括号或括号.
+
+由于发生了语法错误, awk 不会尝试执行这个程序.
+然而有些错误直到运行时才会检测到. 例如, 你的程序尝试用 0 作除数, 这时候 awk
+会停止处理, 接着报告输入行的行号, 以及程序中尝试进行除法运算的代码所在的
+行号.
