定义了几个简单的环境与命令, 仅仅是为了顺利编译

--- a/an_awk_tutorial.tex
+++ b/an_awk_tutorial.tex
@@ -5,7 +5,7 @@
 
 Awk 是一种使用方便且表现力很强的编程语言, 它可以应用在许多种类的计算与数据
 处理任务中. 这一章是一个简短的教程, 旨在让你尽可能快地写出自己的 awk 程序.
-第 \ref{chap:the_awk_language} 对整个 awk 语言进行描述, 剩下的章节展现了
+第 \ref{chap:the_awk_language} 章对整个 awk 语言进行描述, 剩下的章节展现了
 在多种不同的领域中, 如何使用 awk 解决问题. 在这本书中出现的例子, 读者应该
 会感到非常有用, 有趣且具有指导作用.
 
