define \shell env for shell env

--- a/preamble.tex
+++ b/preamble.tex
@@ -47,6 +47,11 @@
 {\verbatim}%
 {\endverbatim}
 
+% shell command, from package verbatim
+\newenvironment{shell}%
+{\verbatim}%
+{\endverbatim}
+
 % pattern for many situations
 \newenvironment{pattern}%
 {\begin{quotation}}%
