--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 
 \documentclass[nofonts]{book}
 
-\usepackage{geometry}
+%\usepackage{geometry}
 \usepackage{fontspec}
 \usepackage{xeCJK}
 \usepackage{hyperref}
@@ -11,7 +11,7 @@
 \usepackage{verbatim}
 
 % from package geometry
-\geometry{bottom = 2cm, outer = 2cm}
+%\geometry{bottom = 2cm, outer = 2cm}
 
 % page style from package fancyhdr
 \pagestyle{fancy}
