complete section "printting every line" and "print certain field"

--- a/preamble.tex
+++ b/preamble.tex
@@ -62,6 +62,10 @@
 % term in Chinese
 \newcommand\cterm[1]{\textbf{#1}}
 
+% word that shows frequently
+\newcommand\awk{\texttt{awk}}
+\newcommand\print{\texttt{print}}
+
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
     \url{https://github.com/wuzhouhui/awk}
