--- a/preamble.tex
+++ b/preamble.tex
@@ -65,6 +65,7 @@
 % word that shows frequently
 \newcommand\awk{\texttt{awk}}
 \newcommand\print{\texttt{print}}
+\newcommand\nf{\texttt{NF}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
