--- a/preamble.tex
+++ b/preamble.tex
@@ -66,6 +66,7 @@
 \newcommand\awk{\texttt{awk}}
 \newcommand\print{\texttt{print}}
 \newcommand\nf{\texttt{NF}}
+\newcommand\nf{\texttt{NR}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
