--- a/preamble.tex
+++ b/preamble.tex
@@ -65,8 +65,9 @@
 % word that shows frequently
 \newcommand\awk{\texttt{awk}}
 \newcommand\print{\texttt{print}}
+\newcommand\printf{\texttt{printf}}
 \newcommand\nf{\texttt{NF}}
-\newcommand\nf{\texttt{NR}}
+\newcommand\nr{\texttt{NR}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
