--- a/preamble.tex
+++ b/preamble.tex
@@ -68,6 +68,11 @@
 \newcommand\printf{\texttt{printf}}
 \newcommand\nf{\texttt{NF}}
 \newcommand\nr{\texttt{NR}}
+\newcommand\AND{\texttt{\&\&}}
+\newcommand\OR{\texttt{||}}
+\newcommand\NOT{\texttt{!}}
+\newcommand\BEGIN{\texttt{BEGIN}}
+\newcommand\END{\texttt{END}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
