Set document class from "book" to "ctexbook".
"ctexbook" document class support chinese much better.

--- a/an_awk_tutorial.tex
+++ b/an_awk_tutorial.tex
@@ -31,7 +31,7 @@ awk '$3 > 0 { print $1, $2 * $3 }' emp.data
 \end{awkcode}
 这一行命令告诉系统运行 awk 命令, 被运行的程序被单引号包围, 从输入文件
 \filename{emp.data} 获取数据. 被单引号包围的部分是一个完整的 awk 程序. 它由
-一个单独的 \cterm{模式-动作 语句)} (\term{pattern-action statement}) 组成.
+一个单独的 \cterm{模式-动作 语句} (\term{pattern-action statement}) 组成.
 模式 \verb'$3 > 0' 匹配每一行输入, 如果该行的第三列, 或者说 \cterm{字段}
 (\term{field}) 大于零, 则动作
 \begin{awkcode}
@@ -77,8 +77,8 @@ $
     ...
 \end{pattern}
 awk 的基本操作是在由输入行组成的序列中, 一个接一个地扫描每一行, 搜索被程序
-中的模式 \cterm{匹配} (\term{match}) 的行. "匹配" 的精确含义依赖于问题中
-的模式, 对于模式, 例如 \verb'$3 > 0', 意味着 "条件为真".
+中的模式 \cterm{匹配} (\term{match}) 的行. ``匹配'' 的精确含义依赖于问题中
+的模式, 对于模式, 例如 \verb'$3 > 0', 意味着 ``条件为真''.
 
 每一个输入行轮流被每一个模式测试. 每匹配一个模式, 对应的动作 (可能包含多个
         步骤) 就会执行. 然后下一行被读取, 匹配重新开始. 这个过程会一起持续
@@ -178,9 +178,9 @@ Dan     3.75    0
             missing ]
     awk: Bailing out at source line 1
 \end{file}
-"Syntax error" 意味着你犯了一个语法错误, 这个错误被发现的地方用
-\verb'>>> <<<' 标记. "Bailing out" 意味着无法恢复. 有时候, 你可以得到更多的
-关于错误的信息, 例如报告了一个不匹配的花括号或括号.
+``Syntax error'' 意味着你犯了一个语法错误, 这个错误被发现的地方用
+\verb'>>> <<<' 标记. ``Bailing out'' 意味着无法恢复. 有时候, 你可以得到更
+多的 关于错误的信息, 例如报告了一个不匹配的花括号或括号.
 
 由于发生了语法错误, awk 不会尝试执行这个程序.
 然而有些错误直到运行时才会检测到. 例如, 你的程序尝试用 0 作除数, 这时候 awk
