--- a/preamble.tex
+++ b/preamble.tex
@@ -85,6 +85,7 @@
 \newcommand\NOT{\texttt{!}}
 \newcommand\BEGIN{\texttt{BEGIN}}
 \newcommand\END{\texttt{END}}
+\newcommand\length{\texttt{length}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
