--- a/preamble.tex
+++ b/preamble.tex
@@ -86,6 +86,8 @@
 \newcommand\BEGIN{\texttt{BEGIN}}
 \newcommand\END{\texttt{END}}
 \newcommand\length{\texttt{length}}
+\newcommand\while{\texttt{while}}
+\newcommand\for{\texttt{for}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
