--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,7 @@
 % vim: ts=4 sts=4 sw=4 et tw=75
 % preamble here.
 
-\documentclass[nofonts]{ctexbook}
+\documentclass[nofonts, oneside]{ctexbook}
 
 \usepackage{geometry}
 \usepackage{fontspec}
@@ -11,7 +11,12 @@
 \usepackage{verbatim}
 
 % from package geometry
-\geometry{bottom = 2cm, outer = 2cm}
+\geometry{%
+    bottom = 2cm,
+    outer = 2.5cm,
+    inner = 2.5cm,
+    marginparsep = 0.5cm
+}
 
 % page style from package fancyhdr
 %\pagestyle{fancy}
