--- a/preamble.tex
+++ b/preamble.tex
@@ -32,9 +32,9 @@
 }
 
 % from package fontspec and xeCJK
-\setCJKmainfont[Scale=1.0]{AR PL UKai CN}
-\setCJKsansfont[Scale=1.0]{AR PL UKai CN}
-\setCJKmonofont[Scale=1.0]{AR PL UKai CN}
+\setCJKmainfont{AR PL KaitiM GB}
+\setCJKsansfont{WenQuanYi Zen Hei}
+\setCJKmonofont{AR PLBaosong2GBK Light}
 \setmainfont{Century Schoolbook L}
 \setsansfont{FreeSans}
 \setmonofont{Courier 10 Pitch}
