Make quote symbol straight

--- a/preamble.tex
+++ b/preamble.tex
@@ -37,7 +37,8 @@
 \setCJKmonofont{AR PLBaosong2GBK Light}
 \setmainfont{Century Schoolbook L}
 \setsansfont{FreeSans}
-\setmonofont{Courier 10 Pitch}
+% "Mapping={}" make quote symbol straight
+\setmonofont[Mapping={}]{Courier 10 Pitch}
 
 % the name of file or directory
 \newcommand\filename[1]{\texttt{#1}}
