--- a/preamble.tex
+++ b/preamble.tex
@@ -74,6 +74,9 @@
 % term in Chinese
 \newcommand\cterm[1]{\textbf{#1}}
 
+% subsection unnumbered
+\CTEXsetup[number={}]{subsection}
+
 % word that shows frequently
 \newcommand\awk{\texttt{awk}}
 \newcommand\print{\texttt{print}}
