review stops at "review stops here"

--- a/preamble.tex
+++ b/preamble.tex
@@ -91,7 +91,7 @@
 \newcommand\length{\texttt{length}}
 \newcommand\while{\texttt{while}}
 \newcommand\for{\texttt{for}}
-\newcommand\patact{\mbox{模式}\mbox{--}动作\ }
+\newcommand\patact{\ \mbox{模式}\mbox{--}动作\ }
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
