--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -10,8 +10,8 @@
 
 最简单的 awk 程序是一个由多个 \patact 构成的序列:
 \begin{pattern}
-\textit{pattern} \texttt{\{} \textit{action} \texttt{\}}
-\textit{pattern} \texttt{\{} \textit{action} \texttt{\}}
+\textit{pattern} \texttt{\{} \textit{action} \texttt{\}} \par
+\textit{pattern} \texttt{\{} \textit{action} \texttt{\}} \par
 ...
 \end{pattern}
 在某些语句中, 模式可以不存在; 还有些语句, 动作及其包围它的花括号也可以不存
@@ -25,7 +25,7 @@
 
 这一章的第一节会详细描述模式. 第二节通过描述表达式, 赋值语句与流程控制语句,
 展开对动作的讨论. 剩下的小节包括函数定义, 输出, 输入, 以及 awk 如果调用其
-他程序. 大部分小节都包含对主要性质的小节.
+他程序. 大部分小节都包含对主要性质的总结.
 
 \subsection{输入文件\filename{countries}}
 \label{subsec:the_input_file_countries}
@@ -54,3 +54,4 @@
 
 在这一章的剩下部分, 如果没有显式给出输入数据, 默认将 \filename{countries}
 作为输入数据.
+%%%%%%%%%%%%%%%% review stops here %%%%%%%%%%%%
