translate to 28/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -335,3 +335,9 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
     $0 ~ /Asia/
 \end{awkcode}
 的简写形式.
+
+\subsection{正则表达式}
+\label{subsec:regular_expressions}
+\marginpar{28}
+正则表达式是一种用于指定和匹配字符串的表示法. 就像算术表达式一样,
+一个正则表达式是一个基本表达式, 或者是一个通过将运算符应用到
