get syntax right by defing \nf.

--- a/preamble.tex
+++ b/preamble.tex
@@ -101,6 +101,7 @@
 \newcommand\expr{\textit{expression}}
 \newcommand\regexpr{\textit{regular expression}}
 \newcommand\pat{\textit{pattern}}
+\newcommand\fs{\texttt{FS}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
