redefine \summary by \rule instead of \hrulefill.
如果使用 \hrulefill 画双线, 双线间的距离会浮动, 而 \rule 也有
同样的问题. 于是放弃双线, 而是改用 \rule 画一条粗线.

--- a/preamble.tex
+++ b/preamble.tex
@@ -75,15 +75,15 @@
 \newenvironment{summary}[1]
 {
     \begin{center}
-        \hrulefill
+        \rule{\textwidth}{2.0pt}
     \end{center}
-    \vspace{-0.60cm}
+    \vspace{-2.0em}
     \begin{center} \Large{#1} \end{center}%
 }
 {
-    \vspace{-0.5cm}
+    \vspace{-1.2em}
     \begin{center}
-        \hrulefill
+        \rule{\textwidth}{2.0pt}
     \end{center}
 }
 
