fill table line that missed

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -204,6 +204,7 @@
     \hline
     \hline
     运算符      & 意义 \\
+    \hline
     \verb'<'    & 小于 \\
     \verb'<='   & 小于或等于 \\
     \verb'=='   & 等于  \\
