translate to 29/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -340,4 +340,86 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 \label{subsec:regular_expressions}
 \marginpar{28}
 正则表达式是一种用于指定和匹配字符串的表示法. 就像算术表达式一样,
-一个正则表达式是一个基本表达式, 或者是一个通过将运算符应用到
+一个正则表达式是一个基本表达式, 或者是多个子表达式通过运算符组合而成.
+为了理解被一个正则表达式匹配的字符串, 我们需要先了解被子表达式匹配的字符串.
+\begin{summary}{正则表达式}
+\begin{enumerate}
+\item 正则表达式的元字符包括: \\
+    \verb'\ ^ $ . [ ] | ( ) * + ?'
+\item 一个基本的表达式包括下面几种: \\
+    一个不是元字符的字符, 例如 \verb'A', 这个正则表达式匹配的就是它本身. \\
+    一个匹配特殊符号的转义字符: \verb'\t' 匹配一个制表符 (见表
+    \ref{tbl:escape_sequence}). \\
+    一个被引述的元字符, 例如 \verb'\*', 按字面意义匹配元字符. \\
+    \verb'^' 匹配一行的开始. \\
+    \verb'$' 匹配一行的结束. \\
+    \verb'.' 匹配任意一个字符. \\
+    一个字符集合: \verb'[ABC]' 匹配字符 \verb'A', \verb'B' 或 \verb'C'. \\
+    字符集合可能包含缩写形式: \verb'[A-Za-z]' 匹配单个字母. \\
+    一个互补的字母集合: \verb'[^0-9]' 匹配任意一个字符, 但是除了数字.
+\item 这些运算符将正则表达式组合起来:
+    选择: \verb'A|B' 匹配 \verb'A' 或 \verb'B'. \\
+    连接: \verb'AB' 匹配后面紧跟着 \verb'B' 的 \verb'A'. \\
+    闭包: \verb'A*' 匹配0个或多个 \verb'A'. \\
+    正闭包: \verb'A+' 匹配一个或多个 \verb'A'. \\
+    零或一: \verb'A?' 匹配空字符串或 \verb'A'. \\
+    括号: \verb'('\textit{r}\verb')' 匹配与 \textit{r} 相同的字符串.
+\end{enumerate}
+\end{summary}
+
+基本的正则表达式在上面的表格中列出. 字符
+\begin{file}
+    \ ^ $ . [ ] | ( ) * + ?
+\end{file}
+叫作 \cterm{元字符} (\term{metacharacter}), 之所以这样称呼是因为它们具有
+特殊的意义. 一个由单个非元字符构成的正则表达式匹配它自身. 于是, 一个字母
+或一个数字都算作是一个基本的正则表达式, 与自身相匹配.  为了在正则表达式中
+保留元字符的字面意义, 需要在字符的前面加上反斜杆. 于是, \verb'\$' 匹配
+普通字符 \verb'$'. 如果某个字符前面冠有 \verb'\', 我们就说该字符是被
+\cterm{引述} (\term{quoted}) 的.
+
+在一个正则表达式中, 一个未被引述的脱字符 \verb'^' 表示一行的开始, 一个
+未被引述的美元符 \verb'$' 匹配一行的结束, 一个未被引述的句点 \verb'.' 匹配
+匹配任意一个字符. 于是,
+\begin{tabbing}
+    \verb'^C' \hspace{6em}  \= 匹配以字符 \verb'C' 开始的字符串; \\
+    \verb'C$'   \> 匹配以字符 \verb'C' 结束的字符串; \\
+    \verb'^C$'  \> 匹配只含有单个字符 \verb'C' 的字符串; \\
+    \verb'^.$'  \> 匹配有且仅有一个字符的字符串; \\
+    \verb'^...$ \> 匹配有且仅有3个字符的字符串; \\
+    \verb'...'  \> 匹配任意3个字符; \\
+    \verb'\.$'  \> 匹配以句点结束的字符串.
+\end{tabbing}
+\marginpar{29}
+
+由一组被包围在方括号中的字符组成的正则表达式称为 \cterm{字符集合}
+(\term{character class}); 这个表达式匹配字符集合中的任意一个字符. 例如,
+\verb'[AEIOU]' 匹配 \verb'A', \verb'E', \verb'I', \verb'O' 或 \verb'U'.
+
+使用连字符的字符集合可以表示一段字符范围. 紧跟在连字符左边的字符定义了范围
+的开始, 紧跟在连字符右边的字符定义了范围的结束. 于是, \verb'[0-9]' 匹配
+任意一个数字, \verb'[a-zA-Z][0-9]' 匹配一个后面跟着一个数字的字母. 如果
+左右两边都没有操作数, 那么字符集合中的连字符就表示它本身, 所以 \verb'[+-]'
+与 \verb'[-+]' 匹配一个 \verb'+' 或 \verb'-'. \verb'[A-Za-z-]' 匹配一个
+含有连字符的单词.
+
+一个 \cterm{互补} (\term{complemented}) 的字符集合在 \verb'[' 之后以
+\verb'^' 开始. 这样一个集合匹配任意一个不在集合中的字符, 集合中的字符指的
+是方括号内排在脱字符之后的那些字符. 于是, \verb'[^0-9]' 匹配任意一个不是
+数字的字符; \verb'[^a-zA-Z]' 匹配任意一个不是字母的字符.
+\begin{tabbing}
+    \verb'^[ABC]' \hspace{6em}  \= 匹配以 \verb'A', \verb'B', 或 \verb'C'
+        开始的字符串; \\
+    \verb'^[^ABC]' \> 匹配以任意一个字符 (除了 \verb'A', \verb'B',
+        或 \verb'C') \> 开始的字符串; \\
+    \verb'[^ABC] \> 匹配任意一个字符, 除了 \verb'A', \verb'B', 或
+        \verb'C'; \\
+    \verb'^[^a-z]' \> 匹配任意一个有且仅有一个字符的字符串, 且该字
+        符不能是小写字母.
+\end{tabbing}
+
+在一个字母集合内, 所有的字符都具有它自身的字面意义, 除了引述字符 \verb'/',
+开始的 \verb'^', 以及两个字符间的 \verb'-'. 于是, \verb'[.]' 匹配一个句
+点, \verb'^[^^]' 匹配不以脱字符开始的字符串.
+
+可以使用括号来指定正则表达式中的各个成分如何组合.
