get syntax right until page 29/210

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -388,7 +388,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
     \verb'C$'   \> 匹配以字符 \verb'C' 结束的字符串; \\
     \verb'^C$'  \> 匹配只含有单个字符 \verb'C' 的字符串; \\
     \verb'^.$'  \> 匹配有且仅有一个字符的字符串; \\
-    \verb'^...$ \> 匹配有且仅有3个字符的字符串; \\
+    \verb'^...$' \> 匹配有且仅有3个字符的字符串; \\
     \verb'...'  \> 匹配任意3个字符; \\
     \verb'\.$'  \> 匹配以句点结束的字符串.
 \end{tabbing}
@@ -413,7 +413,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
     \verb'^[ABC]' \hspace{6em}  \= 匹配以 \verb'A', \verb'B', 或 \verb'C'
         开始的字符串; \\
     \verb'^[^ABC]' \> 匹配以任意一个字符 (除了 \verb'A', \verb'B',
-        或 \verb'C') \> 开始的字符串; \\
+        或 \verb'C') 开始的字符串; \\
     \verb'[^ABC] \> 匹配任意一个字符, 除了 \verb'A', \verb'B', 或
         \verb'C'; \\
     \verb'^[^a-z]' \> 匹配任意一个有且仅有一个字符的字符串, 且该字
