review stops at 29/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -391,7 +391,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 \cterm{引述} (\term{quoted}) 的.
 
 在一个正则表达式中, 一个未被引述的脱字符 \verb'^' 表示一行的开始, 一个
-未被引述的美元符 \verb'$' 匹配一行的结束, 一个未被引述的句点 \verb'.' 匹配
+未被引述的美元符 \verb'$' 匹配一行的结束, 一个未被引述的句点 \verb'.'
 匹配任意一个字符. 于是,
 \begin{tabbing}
     \verb'^C' \hspace{6em}  \= 匹配以字符 \verb'C' 开始的字符串; \\
@@ -410,7 +410,7 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 
 使用连字符的字符集合可以表示一段字符范围. 紧跟在连字符左边的字符定义了范围
 的开始, 紧跟在连字符右边的字符定义了范围的结束. 于是, \verb'[0-9]' 匹配
-任意一个数字, \verb'[a-zA-Z][0-9]' 匹配一个后面跟着一个数字的字母. 如果
+任意一个数字, \verb'[a-zA-Z][0-9]' 匹配一个后面紧跟着一个数字的字母. 如果
 左右两边都没有操作数, 那么字符集合中的连字符就表示它本身, 所以 \verb'[+-]'
 与 \verb'[-+]' 匹配一个 \verb'+' 或 \verb'-'. \verb'[A-Za-z-]' 匹配一个
 含有连字符的单词.
@@ -424,14 +424,14 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
         开始的字符串; \\
     \verb'^[^ABC]' \> 匹配以任意一个字符 (除了 \verb'A', \verb'B',
         或 \verb'C') 开始的字符串; \\
-    \verb'[^ABC] \> 匹配任意一个字符, 除了 \verb'A', \verb'B', 或
+    \verb'[^ABC]' \> 匹配任意一个字符, 除了 \verb'A', \verb'B', 或
         \verb'C'; \\
-    \verb'^[^a-z]' \> 匹配任意一个有且仅有一个字符的字符串, 且该字
+    \verb'^[^a-z]$' \> 匹配任意一个有且仅有一个字符的字符串, 且该字
         符不能是小写字母.
 \end{tabbing}
 
-在一个字母集合内, 所有的字符都具有它自身的字面意义, 除了引述字符 \verb'/',
-开始的 \verb'^', 以及两个字符间的 \verb'-'. 于是, \verb'[.]' 匹配一个句
-点, \verb'^[^^]' 匹配不以脱字符开始的字符串.
+在一个字符集合内, 所有的字符都具有它自身的字面意义, 除了引述字符 \verb'\',
+互补字符集合开头的 \verb'^', 以及两个字符间的 \verb'-'.
+于是, \verb'[.]' 匹配一个句点, \verb'^[^^]' 匹配不以脱字符开始的字符串.
 
 可以使用括号来指定正则表达式中的各个成分如何组合.
