--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -510,6 +510,7 @@ Awk 不存在显式的连接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 退格符; \verb'\t' 表示制表符; \verb'007' 表示 ASCII 中的响铃符; \verb'\/'
 表示一个斜杆. 转义序列在 awk 程序中才会有特殊的意义; 如果在数据中, 它们则
 是普通的字符. 完整的转义序列名单在表 \ref{tbl:escape_sequences}.
+\begin{figure}[ht]
 \caption{转义序列}
 \label{tbl:escape_sequences}
 \begin{tabular}{c|c}
@@ -525,9 +526,10 @@ Awk 不存在显式的连接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     \verb'\'\textit{ddd} & 八进制数 \textit{ddd}, \textit{ddd} 含有 1 到 3
         个数字, 每个数字的值在 0 到 7 之间 \\
     \verb'\'\textit{c} & 其他的字面意义上的 \textit{c} (举例来说, \verb'\\'
-        表示反斜杆, \verb'\"' 表示双引号)
+        表示反斜杆, \verb'\"' 表示双引号) \\
     \hline
 \end{tabular}
+\end{figure}[ht]
 
 表 \ref{tbl:regular_expressions} 总结了正则表达式, 以及它们所匹配的字符串.
 运算符按优先级递增的顺序列出.
